--- a/config/locales/views/zh-TW.yml
+++ b/config/locales/views/zh-TW.yml
@@ -10,6 +10,7 @@ zh-TW:
     leftbar:
       sidebar:
         threads: '訊息串'
+        drafts: '草稿區'
         mentions: 'Mentions & reactions'
         save: '資料存放區'
         more: '...看更多'
