--- a/config/locales/views/en.yml
+++ b/config/locales/views/en.yml
@@ -10,6 +10,7 @@ en:
     leftbar:
       sidebar:
         threads: 'Threads'
+        drafts: 'Drafts'
         Mentions: 'Mentions & reactions'
         save: 'Saved items'
         more: '...More'
