修改草稿bug 修整表單RWD

--- a/config/locales/views/en.yml
+++ b/config/locales/views/en.yml
@@ -15,6 +15,7 @@ en:
         save: 'Saved items'
         more: '...More'
         shared: 'Shared'
+        invite: '+invite people'
       channel:
         name: 'Channel'
         new: 'New a channel'
