reabse修整程式碼

--- a/config/locales/views/zh-TW.yml
+++ b/config/locales/views/zh-TW.yml
@@ -1,12 +1,5 @@
 zh-TW:
   shared:
-    header:
-      search:
-        placeholder: '搜尋'
-      profile:
-        status: '狀態'
-        edit: '編輯個人資料'
-        sign_out: '登出'
     leftbar:
       sidebar:
         threads: '訊息串'
@@ -42,6 +35,10 @@ zh-TW:
       name_placeholder: '輸入聊天室名稱'
       desc_placeholder: '輸入關於此聊天室的描述'      
       about: '這個聊天室是關於?'
+    show:
+      status: '狀態'
+      edit: '編輯個人資料'
+      sign_out: '登出'  
   workspaces:
     index:
       join: '你所加入的有以下:'
