檢查是否有i18n

--- a/config/locales/utilities/en.yml
+++ b/config/locales/utilities/en.yml
@@ -2,6 +2,7 @@ en:
   utilities:
     submit: 'submit'
     back_home: 'Home'
+    save: 'Save'
     messages: 
       delete: "Are you sure you want to delete?"
   
