--- a/config/locales/utilities/zh-TW.yml
+++ b/config/locales/utilities/zh-TW.yml
@@ -2,6 +2,8 @@ zh-TW:
   utilities:
     submit: '送出'
     back_home: '回首頁'
+    save: '儲存'
+    share: '分享'
     messages: 
       delete: "確定要刪除嗎？"
     
