--- a/config/locales/utilities/en.yml
+++ b/config/locales/utilities/en.yml
@@ -3,6 +3,7 @@ en:
     submit: 'submit'
     back_home: 'Home'
     save: 'Save'
+    share: 'Share'
     messages: 
       delete: "Are you sure you want to delete?"
   
