--- a/config/locales/views/zh-TW.yml
+++ b/config/locales/views/zh-TW.yml
@@ -2,101 +2,96 @@ zh-TW:
   shared:
     leftbar:
       sidebar:
-        threads: '訊息串'
-        drafts: '草稿區'
-        mentions: 'Mentions & reactions'
-        save: '資料存放區'
-        more: '...看更多'
-        shared: '已分享'
-        invite: '+邀請加入'
+        drafts: "草稿區"
+        save: "資料存放區"
+        invite: "+邀請加入"
       channel:
-        name: '頻道名稱'
-        new: '建立新聊天室'
-        direct: '一對一聊天'
+        name: "頻道名稱"
+        new: "建立新聊天室"
+        direct: "一對一聊天"
     invite_ws:
-      invite: '邀請成員加入%{name}'
-      placeholder: '依信箱或暱稱搜尋'
-      send: '發送'
+      invite: "邀請成員加入%{name}"
+      placeholder: "依信箱或暱稱搜尋"
+      send: "發送"
     invite_ch:
-      invite: '邀請成員加入'
-      placeholder: '選擇欲邀請成員'
-      send: '邀請發送'
+      invite: "邀請成員加入"
+      placeholder: "選擇欲邀請成員"
+      send: "邀請發送"
     msgform:
-      placeholder: '請輸入訊息'
+      placeholder: "請輸入訊息"
     msgform_direct:
-      placeholder: '請輸入訊息'
+      placeholder: "請輸入訊息"
     sharefileform:
-      title: '上傳檔案'
-      to: '分享此檔案至' 
-      message: '訊息'
-      placeholder: '請輸入想要傳達的訊息'
-      upload: '上傳'
+      title: "上傳檔案"
+      to: "分享此檔案至"
+      message: "訊息"
+      placeholder: "請輸入想要傳達的訊息"
+      upload: "上傳"
     shareform:
-      share: '分享訊息' 
-      to: '分享給' 
-      message: '訊息'
-      placeholder: '請輸入想要傳達的訊息'
+      share: "分享訊息"
+      to: "分享給"
+      message: "訊息"
+      placeholder: "請輸入想要傳達的訊息"
   channels:
     new:
-      create: '建立聊天室'      
-      name: '聊天室名稱'
-      description: '聊天室描述'
-      communicates: '聊天室的建立是為了團隊能夠有更良好的溝通，創建的名稱最好與團隊息息相關'
-      placeholder: ''
-      name_placeholder: '輸入聊天室名稱'
-      desc_placeholder: '輸入關於此聊天室的描述'      
-      about: '這個聊天室是關於?'
+      create: "建立聊天室"
+      name: "聊天室名稱"
+      description: "聊天室描述"
+      communicates: "聊天室的建立是為了團隊能夠有更良好的溝通，創建的名稱最好與團隊息息相關"
+      name_placeholder: "輸入聊天室名稱"
+      desc_placeholder: "輸入關於此聊天室的描述"
+      about: "這個聊天室是關於?"
     show:
-      status: '狀態'
-      edit: '編輯個人資料'
-      sign_out: '登出'  
+      status: "狀態"
+      edit: "編輯個人資料"
+      sign_out: "登出"
   workspaces:
     index:
-      join: '你所加入的有以下:'
-      your_workspaces: '你的workspaces'
-      different_team: '為其他團隊創建一個新的workspace?'
-      create: '建立一個全新的workspace'
-      create_btn: '+ workspace'
-      launch: '進入'
+      join: "你所加入的有以下:"
+      your_workspaces: "你的workspaces"
+      different_team: "為其他團隊創建一個新的workspace?"
+      create: "建立一個全新的workspace"
+      create_btn: "+ workspace"
+      launch: "進入"
     new:
-      step: '步驟 1'
-      name: '為Workspace建立名稱'
-      name_detail: '這將會是你的workspace名稱，請取一個較容易辨別是你們團隊的名稱。'      
-      placeholder: '請輸入workspace名稱'
+      step: "步驟 1"
+      name: "為Workspace建立名稱"
+      name_detail: "這將會是你的workspace名稱，請取一個較容易辨別是你們團隊的名稱。"
+      placeholder: "請輸入workspace名稱"
       errors:
         messages:
-          blank: 'Type the name of your team or company — we’ll use this as the name of your new Slack workspace.'
-          exist: '%{name} has already exist'
+          blank: "Type the name of your team or company — we’ll use this as the name of your new Slack workspace."
+          exist: "%{name} has already exist"
     show:
-      name: 'Workspace名稱：%{name}'
-      create_channel: '創立聊天室'
-      all_channels: '以下顯示在%{name}所有的聊天室'
-      delete_channel: '刪除聊天室'
-      join_channel: '加入聊天室'
-      leave_channel: '離開聊天室'
-      your_channels: '以下顯示已加入的聊天室'
+      name: "Workspace名稱：%{name}"
+      create_channel: "創立聊天室"
+      all_channels: "以下顯示在%{name}所有的聊天室"
+      delete_channel: "刪除聊天室"
+      join_channel: "加入聊天室"
+      leave_channel: "離開聊天室"
+      your_channels: "以下顯示已加入的聊天室"
     notification:
       messages:
-        join: '請先加入workspace'
+        join: "請先加入workspace"
   drafts:
-    show: 
-      title: '草稿區'
-      draft: '草稿'
+    show:
+      title: "草稿區"
+      draft: "草稿"
   profiles:
     edit:
-      title: '編輯個人基本資料'
-      full_name: '真實姓名'
-      nickname: '暱稱'
-      phone: '手機號碼'
-      phone_span: '輸入您的手機號碼'
-      photo: '個人大頭貼'
-      upload: '上傳大頭貼'
-      crop: '剪裁你的大頭貼'
-      preview: '預覽'
-      cancel: '取消'
-      remove: '刪除大頭貼'
+      title: "編輯個人基本資料"
+      full_name: "真實姓名"
+      nickname: "暱稱"
+      phone: "手機號碼"
+      phone_span: "輸入您的手機號碼"
+      photo: "個人大頭貼"
+      upload: "上傳大頭貼"
+      crop: "剪裁你的大頭貼"
+      preview: "預覽"
+      cancel: "取消"
+      remove: "刪除大頭貼"
   uploadedfiles:
     index:
-      title: '資料存放區'
-      upload: '上傳'    
+      title: "資料存放區"
+      upload: "上傳"
       
