--- a/config/locales/views/en.yml
+++ b/config/locales/views/en.yml
@@ -59,9 +59,9 @@ en:
       name: "What’s the name of your company or team?"
       name_detail: "This will be the name of your Slack workspace — choose something that your team will recognize."
       placeholder: "Please enter workspace name"
+      upload: "Can upload the workspace Logo"
       errors:
         messages:
-          blank: "Type the name of your team or company — we’ll use this as the name of your new Slack workspace."
           exist: "%{name} has already exist"
     show:
       name: "Workspace Name：%{name}"
