Polishing invite icon and add channel icon

--- a/config/locales/views/en.yml
+++ b/config/locales/views/en.yml
@@ -4,7 +4,7 @@ en:
       sidebar:
         drafts: "Drafts"
         save: "File browser"
-        invite: "+invite people"
+        invite: "invite people"
       channel:
         name: "Channel"
         new: "New a channel"
