--- a/config/locales/views/en.yml
+++ b/config/locales/views/en.yml
@@ -78,6 +78,8 @@ en:
     show: 
       title: "Drafts"
       draft: "draft"
+      none: "You currently have no draft!"
+      desc: "you can put a message in channel and return to draft then you can see it if you want to try"      
   profiles:
     edit:
       title: "Edit your profile"
@@ -91,6 +93,7 @@ en:
       preview: "Preview"
       cancel: "Cancel"
       remove: "remove the photo"
+      confirm: "Are you sure to remove the photo?"
   uploadedfiles:
     index:
       title: "File browser"
